@@ -1,3 +1,15 @@
+2003-11-29  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/VarDef.pm (value): Rename as ...
+	(raw_value): ... this.
+	(value): New method, strip # and \\\n.
+	(dump): Use raw_value.
+	* lib/Automake/Variable.pm (output): Use raw_value.
+	(value_as_list): Simplify, now that backslash and comments
+	are already removed.
+	* tests/txinfo22.test: Make sure Automake isn't confused
+	by comments in variables.
+
 2003-11-27  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi: More target vs. rule editing.  Back out some
